apps/expo/.turbo/turbo-test.log

> crossed-expo@0.1.1 test /srv/crossed/apps/expo
> jest --watchAll

FAIL components/__tests__/StyledText-test.js
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /srv/crossed/node_modules/.pnpm/@react-native+js-polyfills@0.72.1/node_modules/@react-native/js-polyfills/error-guard.js:14
    type ErrorHandler = (error: mixed, isFatal: boolean) => void;
         ^^^^^^^^^^^^

    SyntaxError: Unexpected identifier

      at Runtime.createScriptFromCode (../../node_modules/.pnpm/jest-runtime@29.6.2/node_modules/jest-runtime/build/index.js:1496:14)
      at Object.<anonymous> (../../node_modules/.pnpm/react-native@0.72.3_@babel+core@7.22.9_@babel+preset-env@7.22.9_react@18.2.0/node_modules/react-native/jest/setup.js:16:6)

Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        0.13 s
Ran all test suites.

FAIL components/__tests__/StyledText-test.js
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /srv/crossed/node_modules/.pnpm/@react-native+js-polyfills@0.72.1/node_modules/@react-native/js-polyfills/error-guard.js:14
    type ErrorHandler = (error: mixed, isFatal: boolean) => void;
         ^^^^^^^^^^^^

    SyntaxError: Unexpected identifier

      at Runtime.createScriptFromCode (../../node_modules/.pnpm/jest-runtime@29.6.2/node_modules/jest-runtime/build/index.js:1496:14)
      at Object.<anonymous> (../../node_modules/.pnpm/react-native@0.72.3_@babel+core@7.22.9_@babel+preset-env@7.22.9_react@18.2.0/node_modules/react-native/jest/setup.js:16:6)

Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 t